fix(tooltip): wrap css inside tailwind components layer

--- a/src/SubComponents/Tooltip.css
+++ b/src/SubComponents/Tooltip.css
@@ -1,8 +1,10 @@
-.tooltip {
-  @apply plc-absolute plc-invisible;
-}
+@layer components {
+  .pelcro-root .tooltip {
+    @apply plc-absolute plc-invisible;
+  }
 
-.tooltip-container:hover .tooltip,
-.tooltip:hover {
-  @apply plc-z-50 plc-visible;
+  .pelcro-root .tooltip-container:hover .tooltip,
+  .pelcro-root .tooltip:hover {
+    @apply plc-z-50 plc-visible;
+  }
 }
